<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="How do?" />

        <CheckBox
            android:id="@+id/cbYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Yes" />

        <CheckBox
            android:id="@+id/cbNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No" />

    </LinearLayout>

    <EditText
        android:id="@+id/etComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/ExplainWhyNo"
        android:inputType="textMultiLine"
        android:visibility="gone" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sepviewheight"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:background="@color/colorGrayLight2" />

</LinearLayout>
