<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".WorkActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/workspace_header_shadow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/imgWhiteBackground"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/whiteround" />

        <android.support.v7.widget.CardView
            android:id="@+id/btnProfile"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="20dp"
            android:background="@drawable/roundcorner"
            android:elevation="12dp"
            android:innerRadius="0dp"

            android:shape="ring"
            android:thicknessRatio="1.9"
            app:cardCornerRadius="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:src="@drawable/roza" />

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TicketN" />

                <EditText
                    android:id="@+id/etTicket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="987654321"
                    android:layout_weight="1" />

            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sepviewheight"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_weight="1"
                android:background="@color/colorGrayLight2" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvQuestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ivFront"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/camera" />

                    <TextView
                        android:id="@+id/tvFront"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/Front" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ivBack"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/camera" />

                    <TextView
                        android:id="@+id/tvBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/Back" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <ImageView
                        android:id="@+id/ivRight"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/camera" />

                    <TextView
                        android:id="@+id/tvRight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/RightSide" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                    <ImageView
                        android:id="@+id/ivLeft"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/camera" />

                    <TextView
                        android:id="@+id/tvLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/LeftSide" />
                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sepviewheight"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_weight="1"
                android:background="@color/colorGrayLight2" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/btn_roundfiolet"
                android:text="@string/Save"
                android:textColor="@color/colorButtonBgYellow"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>